--- a/Week2/fruits.html
+++ b/Week2/fruits.html
@@ -8,11 +8,11 @@
 <h1>Danh sách các loại trái cây.</h1>
 <strong>
 <p>
-    <img src="../img/apple.png" width="168",height="186" alt="Banana">
-    <img src="../img/kiwi.png" width="168",height="186" alt="Kiwi">
-    <img src="../img/orange.png" width="168",height="186" alt="Orange">
-    <img src="../img/apple.png" width="168",height="186" alt="Apple">
-    <img src="../img/banana.png" width="168",height="186" alt="Banana">
+    <img src="../IMG/apple.png">
+    <img src="../IMG/banana.png" >
+    <img src="../IMG/kiwi.png">
+    <img src="../IMG/banana.png" >
+    <img src="../IMG/banana.png">
 </p>
 <p>
     <img src="../img/apple.png" width="168",height="186" alt="Apple">
