--- a/Week2/EX3.html
+++ b/Week2/EX3.html
@@ -11,7 +11,7 @@
     <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">
         Wikipedia
     </a>.
-</p><img src="../img/bear.jpg" alt="Brown Bear">
+</p><img src="../IMG/bear.jpg" alt="Brown Bear">
 <h2>Here are some bear species:</h2>
 <ul>
     <li>Arctos</li>
